--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,4 @@ phases:
       - scp -o StrictHostKeyChecking=no \
         -i cicd.pem \
         index.html \
-        ubuntu@<EC2_PUBLIC_IP>:/var/www/html/
+        ubuntu@13.220.174.65:/var/www/html/
